# rust-mini-projects

./: README.md
rock-paper-scissors/: Cargo.toml
rock-paper-scissors/src/: main.rs  main_v2.rs
